debug, Work-around emulator timeout ui test action file for #2

--- a/.github/workflows/android_ui_test.yaml
+++ b/.github/workflows/android_ui_test.yaml
@@ -21,3 +21,4 @@ jobs:
           # in current docs of reactivecircus, the script is
           # ./gradlew connectedCheck
           script: ./gradlew app:connectedCheck
+          emulator-build: 7425822 # https://github.com/ReactiveCircus/android-emulator-runner/issues/160
