--- a/.github/workflows/android_build.yaml
+++ b/.github/workflows/android_build.yaml
@@ -10,12 +10,12 @@ jobs:
       - uses: actions/checkout@v1
 
       - name: Set Up JDK
-        uses: actions/setup-java@v1
+      - uses: actions/setup-java@v1
         with:
           java-version: '17'
 
       - name: Build Project
-        run: ./gradlew assemble
+      - run: ./gradlew assemble
 
       - name: Run Tests
-        run: ./gradlew test
+      - run: ./gradlew test
