--- a/.github/workflows/android_build.yaml
+++ b/.github/workflows/android_build.yaml
@@ -1,3 +1,25 @@
+#name: Android Build
+#
+#on: push
+#
+#jobs:
+#  build:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: checkout
+#      - uses: actions/checkout@v1
+#
+#      - name: Set Up JDK
+#      - uses: actions/setup-java@v1
+#        with:
+#          java-version: '17'
+#
+#      - name: Build Project
+#      - run: ./gradlew assemble
+#
+#      - name: Run Tests
+#      - run: ./gradlew test
+
 name: Android Build
 
 on: push
@@ -6,16 +28,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: checkout
-      - uses: actions/checkout@v1
+      - name: Checkout
+        uses: actions/checkout@v1
 
       - name: Set Up JDK
-      - uses: actions/setup-java@v1
+        uses: actions/setup-java@v1
         with:
-          java-version: '17'
+          java-version: 1.11
 
       - name: Build Project
-      - run: ./gradlew assemble
-
-      - name: Run Tests
-      - run: ./gradlew test
+        run: ./gradlew assemble
