--- a/.github/workflows/android_build.yaml
+++ b/.github/workflows/android_build.yaml
@@ -7,15 +7,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout
-      - uses: actions/checkout@v1
+        uses: actions/checkout@v1
 
-      - name: Set Up JDK
-      - uses: actions/setup-java@v1
+      - uses: actions/setup-java@v3
         with:
+          distribution: 'temurin'
           java-version: '17'
+          cache: 'gradle'
+
 
       - name: Build Project
-      - run: ./gradlew assemble
+        run: ./gradlew assemble
 
       - name: Run Tests
-      - run: ./gradlew test
+        run: ./gradlew test
