--- a/.github/workflows/android_ui_test.yaml
+++ b/.github/workflows/android_ui_test.yaml
@@ -3,19 +3,19 @@ name: Android UI Tests
 on: pull_request
 
 jobs:
-  android-test:
+  build:
     runs-on: macos-latest
     steps:
       - name: Checkout
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
 
       - name: Set Up JDK
-      - uses: actions/setup-java@v1
+        uses: actions/setup-java@v1
         with:
           java-version: '17'
 
       - name: Run Tests
-      - uses: reactivecircus/android-emulator-runner@v2
+        uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 29
           # in current docs of reactivecircus, the script is
