--- a/.github/workflows/android_build.yaml
+++ b/.github/workflows/android_build.yaml
@@ -1,25 +1,3 @@
-#name: Android Build
-#
-#on: push
-#
-#jobs:
-#  build:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: checkout
-#      - uses: actions/checkout@v1
-#
-#      - name: Set Up JDK
-#      - uses: actions/setup-java@v1
-#        with:
-#          java-version: '17'
-#
-#      - name: Build Project
-#      - run: ./gradlew assemble
-#
-#      - name: Run Tests
-#      - run: ./gradlew test
-
 name: Android Build
 
 on: push
@@ -28,13 +6,20 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v1
+      - name: checkout
+      - uses: actions/checkout@v1
 
-      - name: Set Up JDK
-        uses: actions/setup-java@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
         with:
-          java-version: 1.11
+          distribution: 'temurin' # See 'Supported distributions' for available options
+          java-version: '17'
+      - run: java HelloWorldApp.java
 
       - name: Build Project
-        run: ./gradlew assemble
+      - run: ./gradlew assemble
+
+      - name: Run Tests
+      - run: ./gradlew test
+
+
