--- a/.github/workflows/android_build.yaml
+++ b/.github/workflows/android_build.yaml
@@ -7,13 +7,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
 
       - uses: actions/setup-java@v3
         with:
           distribution: 'temurin' # See 'Supported distributions' for available options
           java-version: '17'
-      - run: java HelloWorldApp.java
 
       - name: Build Project
       - run: ./gradlew assemble
