fixing typo, android build github actions for #2

--- a/.github/workflows/android_build.yaml
+++ b/.github/workflows/android_build.yaml
@@ -15,9 +15,9 @@ jobs:
           java-version: '17'
 
       - name: Build Project
-      - run: ./gradlew assemble
+        run: ./gradlew assemble
 
       - name: Run Tests
-      - run: ./gradlew test
+        run: ./gradlew test
 
 
