--- a/.github/workflows/android_build.yaml
+++ b/.github/workflows/android_build.yaml
@@ -13,6 +13,7 @@ jobs:
         with:
           distribution: 'temurin' # See 'Supported distributions' for available options
           java-version: '17'
+          cache: 'gradle'
 
       - name: Build Project
         run: ./gradlew assemble
