--- a/.github/workflows/danger_checks.yml
+++ b/.github/workflows/danger_checks.yml
@@ -23,11 +23,13 @@ jobs:
           key: ${{ runner.os }}-gems-${{ hashFiles('Gemfile') }} # change your gemfile path
           restore-keys: |
             ${{ runner.os }}-gems-
-      - uses: MeilCli/danger-action@v5
-        with:
-          plugins_file: 'Gemfile'
-          install_path: 'vendor/bundle'
-          danger_file: 'Dangerfile'
-          danger_id: 'danger-pr'
+
+      - name: Danger Checks
+        run: |
+          ./gradlew dependencyUpdates
+          gem install bundler
+          bundle install
+          bundle exec danger
+
         env:
           DANGER_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
