debug Danger Github workflow CI for #3

--- a/.github/workflows/danger_checks.yml
+++ b/.github/workflows/danger_checks.yml
@@ -29,10 +29,7 @@ jobs:
 
 
       - name: Danger Checks
-        run: |
-          gem install bundler
-          bundle install
-          bundle exec danger
+        run: bundle exec danger --verbose
 #               seems to be added later in the project
 #          ./gradlew dependencyUpdates
 
