debug Danger Github workflow CI for #3

--- a/.github/workflows/danger_checks.yml
+++ b/.github/workflows/danger_checks.yml
@@ -35,4 +35,4 @@ jobs:
 
 
         env:
-          DANGER_GITHUB_API_TOKEN: ${{ secrets.dangerToken }}
+          DANGER_GITHUB_API_TOKEN: ${{ secrets.DANGER_GITHUB_API_TOKEN }}
