--- a/.github/workflows/danger_checks.yml
+++ b/.github/workflows/danger_checks.yml
@@ -32,7 +32,7 @@ jobs:
         run: bundle exec danger --verbose
 
         env:
-          DANGER_GITHUB_API_TOKEN: ${{ secrets.DANGER_GITHUB_API_TOKEN }}
+          DANGER_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN  }}
 #               seems to be added later in the project
 #          ./gradlew dependencyUpdates
 
