--- a/.github/workflows/danger_checks.yml
+++ b/.github/workflows/danger_checks.yml
@@ -14,6 +14,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 100
 
       #setup JDK for gradle
       - uses: actions/setup-java@v3
