update ui test job name for #2

--- a/.github/workflows/android_ui_test.yaml
+++ b/.github/workflows/android_ui_test.yaml
@@ -3,7 +3,7 @@ name: Android UI Tests
 on: pull_request
 
 jobs:
-  build:
+  android-ui-test:
     runs-on: macos-latest
     steps:
       - name: Checkout
