--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,19 @@
+buildscript {
+    ext {
+        // https://github.com/JLLeitschuh/ktlint-gradle/releases
+        ktLintPluginVersion = "11.3.2"
+    }
+}
+
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '8.0.1' apply false
     id 'com.android.library' version '8.0.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
+    id 'org.jlleitschuh.gradle.ktlint' version "$ktLintPluginVersion" apply false
+}
+
+subprojects {
+//    ktlint for code formatting
+    apply from:"../buildscripts/ktlint.gradle"
 }
