--- a/.github/workflows/android_build.yaml
+++ b/.github/workflows/android_build.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Run Tests
         run: ./gradlew test
 
-      - name: Lint check
-        run: ./gradlew ktLintCheck
+      - name: Static Analysis
+        run: ./gradlew ktLintCheck detekt
 
 
