--- a/build.gradle
+++ b/build.gradle
@@ -18,11 +18,13 @@ plugins {
 
 }
 
+// git hooks task
+apply from:"buildscripts/git-hooks.gradle"
+
 subprojects {
 //    ktlint for code formatting
     apply from:"../buildscripts/ktlint.gradle"
     apply from:"../buildscripts/detekt.gradle"
-    // git hooks task
-    apply from:"../git-hooks/git-hooks.gradle"
+
 
 }
