--- a/buildscripts/git-hooks.gradle
+++ b/buildscripts/git-hooks.gradle
@@ -7,12 +7,18 @@ task installGitHook(type: Copy) {
     }
     print("Inside installGitHook")
     // pre-commit hook
-    from new File(rootProject.rootDir, "git-hooks/pre-commit-${suffix}.sh")
+    from(new File(rootProject.rootDir, "git-hooks/pre-commit-${suffix}.sh")) {
+        include '**/*.sh'
+        rename '(.*).sh', '$1'
+    }
     into { new File(rootProject.rootDir, '.git/hooks') }
     rename("pre-commit-$suffix", 'pre-commit')
 
     // pre-push hook
-    from new File(rootProject.rootDir, "git-hooks/pre-push-${suffix}.sh")
+    from(new File(rootProject.rootDir, "git-hooks/pre-push-${suffix}.sh")) {
+        include '**/*.sh'
+        rename '(.*).sh', '$1'
+    }
     into { new File(rootProject.rootDir, '.git/hooks') }
     rename("pre-push-$suffix", 'pre-push')
     fileMode 0775
