--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,17 @@ plugins {
 
 }
 
+// git hooks task
+apply from:"buildscripts/git-hooks.gradle"
+
 subprojects {
 //    ktlint for code formatting
     apply from:"../buildscripts/ktlint.gradle"
     apply from:"../buildscripts/detekt.gradle"
+
+
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
