--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,13 @@ buildscript {
 
         // https://github.com/detekt/detekt/releases
         detektVersion = "1.22.0"
+
+//        https://github.com/mockk/mockk/releases/
+        mockkVersion = "1.13.5"
+//        https://github.com/Kotlin/kotlinx.coroutines/releases
+        coroutines_version = "1.7.2"
+//        https://github.com/google/truth/releases
+        truth_version = "1.1.5"
     }
 }
 
@@ -12,7 +19,7 @@ buildscript {
 plugins {
     id 'com.android.application' version '8.0.1' apply false
     id 'com.android.library' version '8.0.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.22' apply false
     id 'org.jlleitschuh.gradle.ktlint' version "$ktLintPluginVersion" apply false
     id "io.gitlab.arturbosch.detekt" version "$detektVersion"
 
